Oops I forgot my 'p' tag on my paragraph text which was making it stretch a bit: Fixed :)

--- a/style.css
+++ b/style.css
@@ -102,12 +102,14 @@
 .text h3{
     font-size: 4em;
     font-weight: 600;
+    color: #fff;
     line-height: 1em;
     text-transform: uppercase;
 }
 
 .text p{
     font-size: 1.1em;
+    color: #fff;
     margin: 20px 0px;
     font-weight: 400;
     max-width: 700px;
